refactor(access): migrate MCP from SSE to Streamable HTTP (2025-03-26 spec)
BREAKING CHANGE: SSE transport is fully removed. Clients must upgrade to Streamable HTTP.

Java (services/access):
- Upgrade Spring AI 1.0.3 -> 1.1.7
- Remove AccessMcpTransportProvider, McpSessionPrincipalBindingStore (SSE-specific)
- Add McpSessionBindingStore with principal drift detection for Streamable HTTP
- Simplify McpAccessTools: remove reflection hacks, use ThreadLocal context
- Update AccessRequestContextFilter to read Mcp-Session-Id from response headers
- Rewrite SpringAiMcpServerTest for Streamable HTTP POST /mcp endpoint
- Update application.yaml: protocol=STREAMABLE, streamable-http.mcp-endpoint=/mcp
- Untrack services/access/target/ from git

Python (packages/ragflow_runtime):
- Remove MCPServerType.SSE enum value
- Delete SSE branch in mcp_tool_call_conn.py, keep streamablehttp_client only

Docs:
- Update architecture.md and access.md for Streamable HTTP endpoints

Security:
- Restore session principal drift detection (was lost during SSE removal)
- Add mcpRejectsSessionPrincipalDrift test

Tests: 43 pass, 0 fail, 1 skip